objects/Migration_Tool_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Execute_in_Start__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Execute in Start?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Child__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Child?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query_Limit__c</fullName>
        <label>Query Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Query_String__c</fullName>
        <label>Query String</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Migration Tool Configuration</label>
    <nameField>
        <displayFormat>CON# {00000000}</displayFormat>
        <label>Migration Tool Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Migration Tool Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>